<resources>
	<string name="app_name">HelpCircle</string>
	<string name="str_login_title">华晟物联,联系你我</string>
	<string name="str_hint_check_code">请输入您的密码</string>
	<string name="str_get_check_code"></string>
	<string name="str_phone">请输入您的账号</string>
	<string name="str_login">登录</string>
	<string name="str_or">或</string>
	<string name="str_wx_login">微信登录</string>
	<string name="str_copy_right">《相关条款》</string>

</resources>
